--- a/k8s-manifests/webapp-replicaset.yaml
+++ b/k8s-manifests/webapp-replicaset.yaml
@@ -2,15 +2,16 @@ apiVersion: apps/v1
 kind: ReplicaSet
 metadata:
   name: webapp-rs
+  namespace: webapp-ns
 spec:
-  replicas: 2
+  replicas: 3
   selector:
     matchLabels:
-      app: webapp
+      app: employees
   template:
     metadata:
       labels:
-        app: webapp
+        app: employees
     spec:
       containers:
       - name: webapp
@@ -19,10 +20,10 @@ spec:
         - containerPort: 8080
         env:
         - name: DBHOST
-          value: "mysql"
+          value: "mysql.mysql-ns.svc.cluster.local"
         - name: DBPWD
           value: "root"
         - name: APP_COLOR
           value: "blue"
-
-        
+      imagePullSecrets:
+      - name: regcred
