--- a/k8s-manifests/mysql-pod.yaml
+++ b/k8s-manifests/mysql-pod.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: mysql-pod
+  namespace: mysql-ns
   labels:
     app: mysql
 spec:
@@ -13,3 +14,5 @@ spec:
       value: "root"
     ports:
     - containerPort: 3306
+  imagePullSecrets:
+  - name: regcred
