--- a/k8s-manifests/mysql-service.yaml
+++ b/k8s-manifests/mysql-service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mysql
+  namespace: mysql-ns
 spec:
   selector:
     app: mysql
@@ -10,5 +11,3 @@ spec:
     port: 3306
     targetPort: 3306
   type: ClusterIP
-
-        
