--- a/k8s-manifests/webapp-pod.yaml
+++ b/k8s-manifests/webapp-pod.yaml
@@ -2,8 +2,9 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: webapp-pod
+  namespace: webapp-ns
   labels:
-    app: webapp
+    app: employees
 spec:
   containers:
   - name: webapp
@@ -12,11 +13,10 @@ spec:
     - containerPort: 8080
     env:
     - name: DBHOST
-      value: "mysql"
+      value: "mysql.mysql-ns.svc.cluster.local"
     - name: DBPWD
       value: "root"
     - name: APP_COLOR
       value: "blue"
-
-
-        
+  imagePullSecrets:
+  - name: regcred
