--- a/k8s-manifests/webapp-service.yaml
+++ b/k8s-manifests/webapp-service.yaml
@@ -2,9 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: webapp-service
+  namespace: webapp-ns
 spec:
   selector:
-    app: webapp
+    app: employees
   ports:
   - protocol: TCP
     port: 80
